[workspace]

members = [
    "bycat",
    "bycat-error",
    "bycat-container",
    "bycat-service",
    "bycat-http",
    "bycat-futures",
    "bycat-cache",
    "bycat-package",
    "bycat-source",
    "bycat-fs",
    "bycat-img",
]

resolver = "3"


[workspace.dependencies]
relative-path = { version = "2", default-features = false }
mime = { version = "0.3", default-features = false }
bytes = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
pin-project-lite = { version = "0.2" }
either = { version = "1", default-features = false }
heather = { git = "https://github.com/kildevaeld/heather", default-features = false, features = [

] }
serde = { version = "1", default-features = false }
