[package]
name = "bycat-config"
version = "0.1.0"
edition = "2024"

[features]
toml = ["toback/toml"]
yaml = ["toback/yaml"]

[dependencies]
bycat-fs = { path = "../bycat-fs" }
bycat-source = { path = "../bycat-source", features = ["alloc", "std"] }
bycat-package = { path = "../bycat-package", features = ["serde"] }
bycat-error = { path = "../bycat-error" }
bycat-value = { path = "../bycat-value", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

futures = { version = "0.3" }

tinytemplate = { version = "1" }
toback = { git = "https://github.com/kildevaeld/toback-rs", features = [
    "send",
] }

pin-project-lite = "0.2"
tracing = { version = "0.1" }
