[package]
name = "bycat-fs"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
bycat-package = { path = "../bycat-package" }
bycat-source = { path = "../bycat-source", features = ["std"] }
bycat = { path = "../bycat" }
bycat-error = { path = "../bycat-error" }


heather = { workspace = true }

tokio = { version = "1", features = ["fs", "io-util"] }
async-walkdir = { version = "2" }
fast-glob = { version = "0.4" }
async-stream = { version = "0.3" }
relative-path = { workspace = true, features = ["serde", "std"] }
futures = { version = "0.3" }
pathdiff = { version = "0.2" }

mime_guess = { version = "2" }

pin-project-lite = { version = "0.2" }
either = { version = "*" }
bytes = { version = "1", default-features = false }
mime = { version = "0.3" }


[dev-dependencies]
tokio = { version = "1", features = ["fs", "io-util", "rt", "macros"] }
serde = { version = "1", features = ["derive"] }
bycat-package = { path = "../bycat-package", features = ["serde"] }

# pipes-util = { path = "../pipes-util", features = ["serde"] }
