[package]
name = "bycat-http"
version = "0.1.0"
edition = "2024"

[features]


[dependencies]
pin-project-lite = { version = "0.2" }
http-body = { version = "1" }
bycat = { path = "../bycat" }
bycat-package = { path = "../bycat-package" }
bycat-error = { path = "../bycat-error" }
reqwest = { version = "0.12" }
mime = { version = "0.3" }
futures = { version = "0.3" }
relative-path = { workspace = true, features = ["serde"] }
bytes = { version = "1", default-features = false }
