[package]
name = "bycat-package"
version = "0.1.0"
edition = "2024"

[features]
serde = ["dep:serde", "toback", "bycat-error"]


[dependencies]
bycat = { path = "../bycat" }
bycat-futures = { path = "../bycat-futures" }
bycat-error = { path = "../bycat-error", optional = true }
pin-project-lite = { workspace = true }
futures = { workspace = true }
either = { workspace = true }
mime = { workspace = true }
relative-path = { workspace = true, features = ["alloc"] }
fast-glob = { version = "1", default-features = false }
bytes = { workspace = true }

async-trait = { version = "0.1" }

serde = { workspace = true, features = ["derive"], optional = true }
toback = { git = "https://github.com/kildevaeld/toback-rs", features = [
  "send",
  "json",
], optional = true }
