[package]
name = "bycat-value"
version = "0.1.0"
edition = "2024"

[features]
serde = ["dep:serde"]
chrono = ["dep:chrono"]
ryu = ["dep:ryu"]
rquickjs = ["klaver-util"]

[dependencies]
serde = { version = "1", default-features = false, features = [
  "alloc",
], optional = true }

chrono = { version = "0.4", default-features = false, optional = true }
ryu = { version = "1", optional = true }

udled2 = { git = "https://github.com/kildevaeld/udled-rs", branch = "v2" }
udled2-tokenizers = { git = "https://github.com/kildevaeld/udled-rs", branch = "v2" }

klaver-util = { git = "https://github.com/fairy-render/klaver", features = [
  "chrono",
], optional = true }

[dev-dependencies]
serde = { version = "1", default-features = false, features = [
  "alloc",
  "derive",
] }
