[package]
name = "bycat"
version = "0.1.0"
edition = "2024"

[features]
alloc = []
tower = ["dep:tower"]

[dependencies]
futures-core = { version = "0.3", default-features = false }
pin-project-lite = { version = "0.2" }
either = { version = "1", default-features = false }

# heather = { git = "https://github.com/kildevaeld/heather", default-features = false, features = [
#   "alloc",
# ], optional = true }

tower = { version = "0.5", default-features = false, features = [
  "util",
], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[[example]]
name = "arbejd"
path = "./examples/arbejd.rs"
required-features = ["alloc"]
